--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,10 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
