--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/router": "^19.2.0",
     "@fontsource/inter": "^5.2.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-select/ng-select": "^14.2.3",
+    "chart.js": "^4.4.8",
+    "ng-multiselect-dropdown": "^1.0.0",
+    "ng2-charts": "^8.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
