--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/custom-theme.scss",
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
