--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ng-select/ng-select": "^14.2.3",
     "@primeng/themes": "^19.0.9",
     "chart.js": "^4.4.8",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ng-multiselect-dropdown": "^1.0.0",
     "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
