--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-select/ng-select": "^14.2.3",
     "@primeng/themes": "^19.0.9",
+    "angular-plotly.js": "^6.0.0",
     "chart.js": "^4.4.8",
+    "highcharts": "^12.1.2",
+    "highcharts-angular": "^4.0.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "ng-multiselect-dropdown": "^1.0.0",
@@ -38,6 +41,7 @@
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js": "^2.35.4",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
