--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng-multiselect-dropdown": "^1.0.0",
     "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
+    "plotly.js-dist-min": "^3.0.1",
     "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/plotly.js": "^2.35.4",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
